# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and

import("//build/test.gni")

config("module_private_config") {
  visibility = [ ":*" ]
}

group("unittest") {
  testonly = true
  deps = [ ":wukong_ut" ]
}

ohos_unittest("wukong_ut") {
  module_out_path = "ostest/wukong"
  sources = [ "unittest/wukong_test.cpp" ]
  include_dirs = [
    "./common/include",
    "./component_event/include",
    "./input_factory/include",
    "./report/include",
    "./shell_command/include",
    "./test_flow/include",
    "//third_party/googletest/googletest/include/gtest",
  ]
  deps = [
    "//third_party/googletest:gtest",
    "//third_party/libpng:libpng",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_manager",
    "ability_runtime:runtime",
    "accessibility:accessibility_common",
    "accessibility:accessibilityclient",
    "accessibility:accessibleability",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hidumper:lib_dump_usage",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hisysevent:libhisyseventmanager",
    "image_framework:image_native",
    "input:libmmi-client",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "window_manager:libdm",
    "window_manager:libwm",
  ]
  subsystem_name = "wukong"
  part_name = "wukong"
}
