# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and

import("//build/test.gni")

config("module_private_config") {
  visibility = [ ":*" ]
}

group("unittest") {
  testonly = true
  deps = []
  if (!use_libfuzzer) {
    deps += [ ":wukong_ut" ]
  }
}

ohos_unittest("wukong_ut") {
  module_out_path = "ostest/wukong"
  sources = [
    "../common/src/app_manager.cpp",
    "../common/src/component_manager.cpp",
    "../common/src/multimode_manager.cpp",
    "../common/src/wukong_logger.cpp",
    "../common/src/wukong_util.cpp",
    "../component_event/src/ability_tree.cpp",
    "../component_event/src/component_tree.cpp",
    "../component_event/src/focus_scene_delegate.cpp",
    "../component_event/src/normal_scene.cpp",
    "../component_event/src/page_tree.cpp",
    "../component_event/src/scene_delegate.cpp",
    "../component_event/src/tree_manager.cpp",
    "../component_event/src/wukong_tree.cpp",
    "../input_factory/src/appswitch_input.cpp",
    "../input_factory/src/component_input.cpp",
    "../input_factory/src/hardkey_input.cpp",
    "../input_factory/src/input_action.cpp",
    "../input_factory/src/input_factory.cpp",
    "../input_factory/src/keyboard_input.cpp",
    "../input_factory/src/mouse_input.cpp",
    "../input_factory/src/record_input.cpp",
    "../input_factory/src/rotate_input.cpp",
    "../input_factory/src/swap_input.cpp",
    "../input_factory/src/touch_input.cpp",
    "../report/src/data_set.cpp",
    "../report/src/exception_manager.cpp",
    "../report/src/filter.cpp",
    "../report/src/filter_category.cpp",
    "../report/src/format.cpp",
    "../report/src/format_csv.cpp",
    "../report/src/format_json.cpp",
    "../report/src/report.cpp",
    "../report/src/statistics.cpp",
    "../report/src/statistics_ability.cpp",
    "../report/src/statistics_componment.cpp",
    "../report/src/statistics_event.cpp",
    "../report/src/statistics_exception.cpp",
    "../report/src/sysevent_listener.cpp",
    "../report/src/table.cpp",
    "../test_flow/src/special_test_flow.cpp",
    "../test_flow/src/test_flow.cpp",
    "../test_flow/src/test_flow_factory.cpp",
    "unittest/wukong_test.cpp",
  ]
  include_dirs = [
    "../common/include",
    "../component_event/include",
    "../input_factory/include",
    "../report/include",
    "../shell_command/include",
    "../test_flow/include",
    "//third_party/googletest/googletest/include/gtest",
    "//base/accessibility/interfaces",
    "//foundation/bundlemanager/bundle_framework/common/log/include",
    "//foundation/multimodalinput/input/interfaces",
    "//base/hiviewdfx/hisysevent/interfaces",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "include",
  ]
  deps = [
    "//third_party/googletest:gtest",
    "//third_party/libpng:libpng",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_manager",
    "ability_runtime:runtime",
    "accessibility:accessibility_common",
    "accessibility:accessibilityclient",
    "accessibility:accessibleability",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hidumper:lib_dump_usage",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hisysevent:libhisyseventmanager",
    "image_framework:image_native",
    "input:libmmi-client",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "window_manager:libdm",
    "window_manager:libwm",
  ]
  subsystem_name = "ostest"
  part_name = "wukong"
}
